# meme-stocks

./: .env.example  .gitignore  pyproject.toml  run_backtest.py  run_signals.py
data/tickers/: nasdaq_nyse_tickers.txt
notebooks/: backtest_results.ipynb
src/: pipeline.py  prices.py
src/backtest/: engine.py  metrics.py
src/extract/: sentiment.py  tickers.py
src/features/: signals.py
src/ingest/: fetch_tickers.py  ingest_dumps.py  pullpush.py  reddit_dumps.py  reddit_live.py
src/model/: dataset.py  predict.py  train.py
src/optimize/: param_search.py
