[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meme-stocks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "polars>=0.20",
    "praw>=7.7",
    "yfinance>=0.2",
    "vaderSentiment>=3.3",
    "requests",
    "tqdm",
    "matplotlib>=3.8",
    "jupyter",
    "pyarrow>=14",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "zstandard>=0.21",
]

[project.optional-dependencies]
ml = ["transformers>=4.40", "torch"]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.ruff]
line-length = 100
